Added footer content

--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
         <footer class="site-footer">
             <section class="site-footer__content">
                 <p class="desc floated floated-left">
-                    © <a href="https://dribbble.com/raazcse">Raaz Das</a> , 2015. All Rights Reserved.
+                    © <a href="https://dribbble.com/raazcse">Raaz Das</a> , 2015. All Rights Reserved.<br>
+                    HTML/CSS Template by <a href="https://github.com/chalatz/services_theme">Christos A.</a> , 2017.
                 </p>
                 <p class="icons floated floated-right">
                     <a class="site-footer__icon-link" href="#">
